--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "highcharts" : "^9.3.1",
-    "jquery" : "^3.6.0",
+    "highcharts-react-official" : "^3.1.0",
     "react": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-bootstrap": "^2.0.2",
