--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "^4.0.3",
+    "react-data-grid": "^7.0.0-beta.7",
     "web-vitals": "^1.1.2",
     "yarn": "^1.22.17"
   },
