--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "bootstrap": "^5.1.3",
     "highcharts": "^9.3.1",
     "highcharts-react-official": "^3.1.0",
+    "http-proxy-middleware": "^2.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
+    "react-data-grid": "^7.0.0-beta.7",
     "react-dom": "^17.0.2",
     "react-router": "^6.0.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "^4.0.3",
-    "react-data-grid": "^7.0.0-beta.7",
     "web-vitals": "^1.1.2",
     "yarn": "^1.22.17"
   },
