--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.0.2",
     "react-data-grid": "^7.0.0-beta.7",
     "react-dom": "^17.0.2",
+    "react-places-autocomplete": "^7.3.0",
     "react-router": "^6.0.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "^4.0.3",
