--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@auth0/auth0-react": "^1.8.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
@@ -23,6 +24,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "^4.0.3",
+    "react-select": "^5.2.2",
     "web-vitals": "^1.1.2",
     "yarn": "^1.22.17"
   },
